--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
+		<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+
 		<!-- Printing and PDF exports -->
 		<script>
 			var link = document.createElement( 'link' );
@@ -76,10 +78,45 @@
 			<div class="hero-body">
 				<div class="reveal">
 					<div class="slides">
-						<section class="">
-							<img class="size-50 no-bg no-border no-shadow" src="imgs/logo-text.png">
+
+						<!-- Slide 1 -->
+						<section>
+							<img class="size-20 no-bg no-border no-shadow" src="imgs/logo-text.png">
 						</section>
-						<section>Slide 2</section>
+
+						<!-- Slide 2 -->
+						<section>
+							<div>
+								<p><h2>Agenda</h2></p>
+								<ul>
+									<li>What is AI</li>
+									<li>Building Blocks of AI</li>
+									<li>History of AI</li>
+									<li>Machine Learning</li>
+									<li>Types of Machine Learning</li>
+									<li>Big Data</li>
+									<li>Use Cases of AI and ML</li>
+									<li>Demo of a AI use case</li>
+								</ul>
+							</div>
+						</section>
+
+						<!-- Slide 3 -->
+						<section>
+							<h2>What is AI?</h2>
+							<iframe width="960" height="500" src="https://www.youtube.com/embed/GCnCLgrTkec?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						</section>
+
+						<!-- Slide 4 -->
+						<section>
+							<h3>Wait..What?</h3>
+							<p>AI on the cloud?</p>
+							<p>Deep Learning?</p>
+							<p>Watson?</p>
+							<p><i class="em em-thinking_face"></i></p>
+							<br>
+							<p class="is-size-3">Don't worry..We got you covered</p>
+						</section>
 					</div>
 				</div>
 			</div>
