--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<!-- Hero content: will be in the middle -->
 			<div class="hero-body">
 				<div class="reveal">
-					<div class="slides">
+					<div class="slides" style="margin-top: -5%;">
 
 						<!-- Slide 1 -->
 						<section>
@@ -103,16 +103,85 @@
 
 						<!-- Slide 3 -->
 						<section>
-							<h2>What is AI?</h2>
-							<iframe width="960" height="500" src="https://www.youtube.com/embed/GCnCLgrTkec?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<h2>What AI brings to mind...</h2>
 						</section>
 
 						<!-- Slide 4 -->
+						<section>
+							<table class="table">
+								<tbody>
+									<tr>
+										<td>
+											<div class="fragment fade-in" data-fragment-index="1">
+												<img class="no-bg no-border no-shadow" src="imgs/sdc.png" alt="Self Driving Cars">
+											</div>
+										</td>
+										<td>
+											<div class="fragment fade-in" data-fragment-index="2">
+												<img class="no-bg no-border no-shadow" src="imgs/cc-fraud.png" alt="Credit Card Fraud">
+											</div>
+										</td>
+										<td>
+											<div class="fragment fade-in" data-fragment-index="3">
+												<img class="no-bg no-border no-shadow" src="imgs/face.png" alt="Face Recognition">
+											</div>
+										</td>
+									</tr>
+									<tr>
+										<td class="caption">
+											<span class="is-size-4 fragment fade-in" data-fragment-index="1">Self-Driving Cars</span>
+										</td>
+										<td class="caption">
+											<span class="is-size-4 fragment fade-in" data-fragment-index="2">Credit Card Fraud Detection</span>
+										</td>
+										<td class="caption">
+											<span class="is-size-4 fragment fade-in" data-fragment-index="3">Face Recognition</span>
+										</td>
+									</tr>
+									<tr>
+											<td>
+												<div class="fragment fade-in" data-fragment-index="4">
+													<img class="no-bg no-border no-shadow" src="imgs/mri.png" alt="Early Detection of Terminal Illnesses">
+												</div>
+											</td>
+											<td>
+												<div class="fragment fade-in" data-fragment-index="5">
+													<img class="no-bg no-border no-shadow" src="imgs/siri.png" alt="Smart Voice Assistant">
+												</div>
+											</td>
+											<td>
+												<div class="fragment fade-in" data-fragment-index="6">
+													<img class="no-bg no-border no-shadow" src="imgs/sophia.png" alt="Robots">
+												</div>
+											</td>
+										</tr>
+										<tr>
+											<td class="caption">
+													<span class="is-size-4 fragment fade-in" data-fragment-index="4">Early Detection of Terminal Illnesses</span>
+												</td>
+												<td class="caption">
+													<span class="is-size-4 fragment fade-in" data-fragment-index="5">Smart Voice Assistant</span>
+												</td>
+												<td class="caption">
+													<span class="is-size-4 fragment fade-in" data-fragment-index="6">Robots</span>
+												</td>
+										</tr>
+								</tbody>
+							</table>
+						</section>
+
+						<!-- Slide 5 -->
+						<section>
+							<iframe width="960" height="500" src="https://www.youtube.com/embed/GCnCLgrTkec?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						</section>
+
+						<!-- Slide 6 -->
 						<section>
 							<h3>Wait..What?</h3>
 							<p>AI on the cloud?</p>
 							<p>Deep Learning?</p>
 							<p>Watson?</p>
+							<p>Classifier?</p>
 							<p><i class="em em-thinking_face"></i></p>
 							<br>
 							<p class="is-size-3">Don't worry..We got you covered</p>
