--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 					<div class="slides" style="margin-top: -5%;">
 
 						<!-- Slide 1 -->
-						<section>
+						<section id="1">
 							<img class="size-20 no-bg no-border no-shadow" src="imgs/logo-text.png">
 						</section>
 
 						<!-- Slide 2 -->
-						<section>
+						<section id="2">
 							<div>
 								<p><h2>Agenda</h2></p>
 								<ul>
@@ -102,12 +102,12 @@
 						</section>
 
 						<!-- Slide 3 -->
-						<section>
+						<section id="3">
 							<h2>What AI brings to mind...</h2>
 						</section>
 
 						<!-- Slide 4 -->
-						<section>
+						<section id="4">
 							<table class="table">
 								<tbody>
 									<tr>
@@ -171,12 +171,12 @@
 						</section>
 
 						<!-- Slide 5 -->
-						<section>
+						<section id="5">
 							<iframe width="960" height="500" src="https://www.youtube.com/embed/GCnCLgrTkec?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 						</section>
 
 						<!-- Slide 6 -->
-						<section>
+						<section id="6">
 							<h3>Wait..What?</h3>
 							<p>AI on the cloud?</p>
 							<p>Deep Learning?</p>
@@ -185,6 +185,62 @@
 							<p><i class="em em-thinking_face"></i></p>
 							<br>
 							<p class="is-size-3">Don't worry..We got you covered</p>
+						</section>
+
+						<!-- Slide 7 -->
+						<section id="7">
+							<p class="fragment" data-fragment-index="1">For so long, Artificial Intelligence (AI) has been just a tool that helps solving simple problems and performing specific tasks.</p>
+							<p class="fragment fade-in is-size-4" data-fragment-index="2">This was achieved through programming and declaring the steps a computer should follow to achieve the task.</p>
+						</section>
+
+						<!-- Slide 8 -->
+						<section id="8">
+							<p>But lately, the concepts of Machine Learning and Deep Learning are starting to show so much potential, and are promising to disrupt many industries and change the future.</p>
+						</section>
+
+						<!-- Slide 9 -->
+						<section id="9">
+							<h3>AI Landscape</h3>
+							<div class="ai-description">
+								<div class="bounding-box">
+									<div class="outer-circle">
+										<div class="ai">
+											<img class="no-bg no-border no-shadow size-10 ai-img" src="imgs/ai-icon.png" alt="Artificial Intelligence Icon">
+											<span class="is-size-4">Artificial Intelligence</span>
+										</div>
+									</div>
+									<div class="middle-circle">
+										<div class="ml">
+											<img class="no-bg no-border no-shadow size-15 ai-img" src="imgs/ml-icon.png" alt="Machine Learning Icon">
+											<span class="is-size-4">Machine Learning</span>
+										</div>
+									</div>
+									<div class="inner-circle">
+										<div class="dl">
+											<img class="no-bg no-border no-shadow size-30 ai-img" src="imgs/dl-icon.png" alt="Deep Learning Icon">
+											<span class="is-size-4">Deep Learning</span>
+										</div>
+									</div>
+								</div>
+								<div class="fragment fade-in ai-text" data-fragment-index="1">
+									<span class="line-right"></span>
+									<span class="is-size-5">AI is the umbrella term that includes other subsets. It involves explicitly programming a computer to perform a specific task. It is used to help solve simple problems.</span>
+								</div>
+								<div class="fragment fade-in ml-text" data-fragment-index="2">
+									<span class="line-left"></span>
+									<span class="is-size-5">Machine Learning is a concept that entails a program that learns without being explicitly programmed. It basically learns from data and experience.</span>
+								</div>
+								<div class="fragment fade-in dl-text" data-fragment-index="3">
+									<span class="line-right-long"></span>
+									<span class="is-size-5">Deep Learning utilizes Neural Networks to understand and learn from data.</span>
+								</div>
+							</div>
+						</section>
+
+						<!-- Slide 10 -->
+						<section id="10">
+							<h4>Evolution of AI over the last decades</h4>
+							<img class="no-bg no-border no-shadow size-120" src="imgs/ai-timeline.png" alt="AI Timeline">
 						</section>
 					</div>
 				</div>
