--- a/index.html
+++ b/index.html
@@ -242,6 +242,48 @@
 							<h4>Evolution of AI over the last decades</h4>
 							<img class="no-bg no-border no-shadow size-120" src="imgs/ai-timeline.png" alt="AI Timeline">
 						</section>
+
+						<!-- Slide 11 -->
+						<section id="11">
+							<h3>Let's simplify this even more</h3>
+						</section>
+
+						<!-- Slide 12 -->
+						<section id="12">
+							<p>Machine Learning and Deep Learning borrow a lot from biology, how our brains are wired and the way we learn as humans.</p>
+							<p class="is-size-4">So let's take a quick look on that first.</p>
+						</section>
+
+						<!-- Slide 13 -->
+						<section id="13">
+							<p class="fragment fade-out in-place" data-fragment-index="1">
+								As humans, we are born with a blank slate <span class="is-size-4">(somewhat)</span>.
+							</p>
+							<span class="fragment fade-in in-place" data-fragment-index="2">
+								<span class="fragment fade-out" data-fragment-index="3">
+									<p>We learn through input data we receive from our environment and our senses.</p>
+									<img class="no-bg no-border no-shadow size-120" src="imgs/learn-1.gif" alt="Brain Learning Process">
+								</span>
+							</span>
+							<span class="fragment fade-in in-place" data-fragment-index="4">
+								<span class="fragment fade-out" data-fragment-index="5">
+									<p>We incorporate this input data with the outcome to form experiences and store them in our memory.</p>
+									<img class="no-bg no-border no-shadow size-120" src="imgs/learn-2.gif" alt="Brain Learning Process">
+								</span>
+							</span>
+							<span class="fragment fade-in in-place" data-fragment-index="6">
+								<span class="fragment fade-out" data-fragment-index="7">
+									<p>Experiences that are repeated and accompanied by some form of reward or punishment create a neural pathway in our brains.</p>
+									<img class="no-bg no-border no-shadow size-120" src="imgs/learn-3.gif" alt="Brain Learning Process">
+								</span>
+							</span>
+							<span class="fragment fade-in in-place" data-fragment-index="8">
+								<span class="fragment fade-out" data-fragment-index="9">
+									<p>Neural Pathways make it easier for the brain to retreive past experiences in new, similar situations and use what it previously learned.</p>
+									<img class="no-bg no-border no-shadow size-50" src="imgs/learn-4.png" alt="Brain Learning Process">
+								</span>
+							</span>
+						</section>
 					</div>
 				</div>
 			</div>
