--- a/index.html
+++ b/index.html
@@ -284,6 +284,25 @@
 								</span>
 							</span>
 						</section>
+
+						<!-- Slide 14 -->
+						<section id="14">
+							<h4>We found a way to make machines learn the same way...</h4>
+						</section>
+
+						<!-- Slide 15 -->
+						<section id="15">
+							<h4 class="move-up">Machine Learning</h4>
+							<span id="experience-animation">+ Experience</span>
+							<div class="level">
+								<span id="data-animation" class="level-item">Data&nbsp; <i class="fas fa-file-alt"></i></span>
+								<span class="ai level-item pc-task">
+									<img class="no-bg no-border no-shadow size-30" src="imgs/idlePC.png" alt="Computer Performing a Task">
+									<span id="task-animation">Task&nbsp; <i class="fas fa-cog fa-spin"></i></span>
+								</span>
+								<span id="performance-animation" class="level-item">Performance&nbsp; <i class="fas fa-thumbs-up"></i></span>
+							</div>
+						</section>
 					</div>
 				</div>
 			</div>
