--- a/index.html
+++ b/index.html
@@ -303,6 +303,47 @@
 								<span id="performance-animation" class="level-item">Performance&nbsp; <i class="fas fa-thumbs-up"></i></span>
 							</div>
 						</section>
+
+						<!-- Slide 16 -->
+						<section id="16" data-transition="zoom">
+							<h4 class="move-up">Deep Learning</h4>
+							<span id="experience-animation-dl">+ Experience</span>
+							<div class="level">
+								<span id="data-animation-dl" class="level-item">Data&nbsp; <i class="fas fa-file-alt"></i></span>
+								<span class="ai level-item pc-task">
+									<img class="no-bg no-border no-shadow" src="imgs/nn.gif" alt="Computer Performing a Task">
+									<span id="task-animation">Task&nbsp; <i class="fas fa-cog fa-spin"></i></span>
+								</span>
+								<span id="performance-animation-dl" class="level-item">Performance&nbsp; <i class="fas fa-thumbs-up"></i></span>
+							</div>
+						</section>
+
+						<!-- Slide 17 -->
+						<section id="17">
+							<h4>Building block of a Neural Network</h4>
+							<img class="no-bg no-border no-shadow" src="imgs/neuron.gif" alt="Artificial Neuron">
+						</section>
+
+						<!-- Slide 18 -->
+						<section id="18">
+							<h4>Comparing Artificial Neuron to a Human Neuron</h4>
+							<img class="no-bg no-border no-shadow size-120" src="imgs/human-neuron.gif" alt="Human Neuron">
+						</section>
+
+						<!-- Slide 19 -->
+						<section id="19">
+							<h4>Stacking Many Neurons Together</h4>
+							<div class="side-by-side">
+								<div class="ai">
+									<span class="is-size-3">Humans</span>
+									<img class="no-bg no-border no-shadow" src="imgs/brain.gif" alt="Human Brain">
+								</div>
+								<div class="ai">
+									<span class="is-size-3">Deep Neural Network</span>
+									<img class="no-bg no-border no-shadow" src="imgs/dnn.gif" alt="Deep Neural Network">
+								</div>
+							</div>
+						</section>
 					</div>
 				</div>
 			</div>
