--- a/index.html
+++ b/index.html
@@ -369,11 +369,56 @@
 
 						<!-- Slide 24 -->
 						<section id="24">
-							<h4></h4>
+							<h4>What problems can Machine Learning solve?</h4>
+							<div class="side-by-side">
+								<div class="ai">
+									<img class="no-bg no-border no-shadow" src="imgs/spam.gif" alt="Spam Filter">
+									<p class="is-size-4 is-marginless is-paddingless">Spam Filteration</p>
+								</div>
+								<div class="ai">
+									<img class="no-bg no-border no-shadow" src="imgs/recommendation.png" alt="Product Recommendation">
+									<p class="is-size-4 is-marginless is-paddingless">Product Recommendation</p>
+								</div>
+							</div>
+							<br>
+							<div class="side-by-side">
+									<div class="ai">
+										<img class="no-bg no-border no-shadow" src="imgs/medical.gif" alt="Medical Diagnosis">
+										<p class="is-size-4 is-marginless is-paddingless">Medical Diagnosis</p>
+									</div>
+									<div class="ai">
+										<img class="no-bg no-border no-shadow" src="imgs/targeting.gif" alt="Targeted Marketing">
+										<p class="is-size-4 is-marginless is-paddingless">Targeted Marketing</p>
+									</div>
+								</div>
 						</section>
 
-						<!-- Slide 30 -->
-						<section id="30" data-transition="zoom">
+						<!-- Slide 25 -->
+						<section id="25">
+							<p class="is-text-3">So Machine Learning is only able to solve very simple problems..</p>
+							<br>
+							<p>What about the more complex tasks like
+								<br>
+								<ul>
+									<li class="has-text-primary no-bullets">Machine Vision,</li>
+									<br>
+									<li class="has-text-primary no-bullets">Natural Language Understanding</li>
+								</ul>
+								<br>
+								<br>
+								<br>
+							and all those things that make AI so cool?</p>
+						</section>
+
+						<!-- Slide 26 -->
+						<section id="26">
+							<p class="is-text-3">Let's take this to another level..</p>
+							<br>
+							<h3 class="fragment has-text-primary">Deep learning</h3>
+						</section>
+
+						<!-- Slide 27 -->
+						<section id="27" data-transition="zoom">
 							<h4 class="move-up">Deep Learning</h4>
 							<span id="experience-animation-dl">+ Experience</span>
 							<div class="level">
@@ -386,20 +431,20 @@
 							</div>
 						</section>
 
-						<!-- Slide 31 -->
-						<section id="31">
+						<!-- Slide 28 -->
+						<section id="28">
 							<h4>Building block of a Neural Network</h4>
 							<img class="no-bg no-border no-shadow" src="imgs/neuron.gif" alt="Artificial Neuron">
 						</section>
 
-						<!-- Slide 32 -->
-						<section id="33">
+						<!-- Slide 29 -->
+						<section id="29">
 							<h4>Comparing Artificial Neuron to a Human Neuron</h4>
 							<img class="no-bg no-border no-shadow size-120" src="imgs/human-neuron.gif" alt="Human Neuron">
 						</section>
 
-						<!-- Slide 34 -->
-						<section id="34">
+						<!-- Slide 30 -->
+						<section id="30">
 							<h4>Stacking Many Neurons Together</h4>
 							<br>
 							<div class="side-by-side">
@@ -417,14 +462,14 @@
 							<span class="is-size-4">Humans have ~10,000 times more computational power than the most powerful "computer brains"</span>
 						</section>
 
-						<!-- Slide 35 -->
-						<section id="35">
+						<!-- Slide 31 -->
+						<section id="31">
 							<h3>Where's the magic?</h3>
 							<span class="is-size-3">How does learning actually happen?</span>
 						</section>
 
-						<!-- Slide 36 -->
-						<section id="36">
+						<!-- Slide 32 -->
+						<section id="32">
 							<h3>Where's the magic?</h3>
 							<span class="is-size-3">How does learning actually happen?</span>
 						</section>
