--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 
 						<!-- Slide 25 -->
 						<section id="25">
-							<p class="is-text-3">So Machine Learning is only able to solve very simple problems..</p>
+							<p class="is-size-3">So Machine Learning is only able to solve very simple problems..</p>
 							<br>
 							<p>What about the more complex tasks like
 								<br>
@@ -408,6 +408,9 @@
 								<br>
 								<br>
 							and all those things that make AI so cool?</p>
+							<br>
+							<br>
+							<p class="is-size-4">It needs advanced feature engineering skills for such problems..is there an alternative?</p>
 						</section>
 
 						<!-- Slide 26 -->
@@ -433,18 +436,24 @@
 
 						<!-- Slide 28 -->
 						<section id="28">
-							<h4>Building block of a Neural Network</h4>
-							<img class="no-bg no-border no-shadow" src="imgs/neuron.gif" alt="Artificial Neuron">
+							<h3>Let's Take an Example</h3>
+							<img class="no-bg no-border no-shadow" src="imgs/cnn-example.gif" alt="Convolutional Neural Network">
 						</section>
 
 						<!-- Slide 29 -->
 						<section id="29">
-							<h4>Comparing Artificial Neuron to a Human Neuron</h4>
-							<img class="no-bg no-border no-shadow size-120" src="imgs/human-neuron.gif" alt="Human Neuron">
+							<h4>Building block of a Neural Network</h4>
+							<img class="no-bg no-border no-shadow" src="imgs/neuron.gif" alt="Artificial Neuron">
 						</section>
 
 						<!-- Slide 30 -->
 						<section id="30">
+							<h4>Comparing Artificial Neuron to a Human Neuron</h4>
+							<img class="no-bg no-border no-shadow size-120" src="imgs/human-neuron.gif" alt="Human Neuron">
+						</section>
+
+						<!-- Slide 31 -->
+						<section id="31">
 							<h4>Stacking Many Neurons Together</h4>
 							<br>
 							<div class="side-by-side">
@@ -462,16 +471,134 @@
 							<span class="is-size-4">Humans have ~10,000 times more computational power than the most powerful "computer brains"</span>
 						</section>
 
-						<!-- Slide 31 -->
-						<section id="31">
-							<h3>Where's the magic?</h3>
-							<span class="is-size-3">How does learning actually happen?</span>
-						</section>
-
 						<!-- Slide 32 -->
 						<section id="32">
-							<h3>Where's the magic?</h3>
-							<span class="is-size-3">How does learning actually happen?</span>
+							<h4>What's special about Deep Learning?</h4>
+							<span class="is-size-3">It can automatically detect millions of features that can be very subtle, but combined, they can be the bases of a machine's understanding of unstructured data like Images and Sound</span>
+							<br>
+							<img class="no-bg no-border no-shadow size-120" src="imgs/ml-vs-dl.png" alt="Machine Learning vs. Deep Learning">
+							<p class="is-size-4">Ok, but how does a Neural Network actually learn?</p>
+						</section>
+
+						<!-- Slide 33 -->
+						<section id="33">
+							<h3>Backpropagation</h3>
+							<img class="no-bg no-border no-shadow size-120" src="imgs/backpropagation.gif" alt="Backpropagation">
+						</section>
+
+						<!-- Slide 34 -->
+						<section id="34">
+							<h4>What Problems Can be Solved with ML and DL?</h4>
+							<br>
+							<p class="is-size-4">Anything that falls under the following categories</p>
+							<img class="no-bg no-border no-shadow" src="imgs/ml-types.jpeg" alt="Machine Learning Types">
+						</section>
+
+						<!-- Slide 35 -->
+						<section id="35">
+							<p class="is-size-2 has-text-weight-semibold">Supervised Learning</p>
+							<p class="is-size-3 has-text-weight-semibold has-text-primary">Data + Labels (What this data means)</p>
+							<br>
+							<div class="side-by-side">
+								<div class="ai">
+									<span class="is-size-3">Classification</span>
+									<br>
+									<span class="is-size-5">Categorical Output</span>
+									<img class="no-bg no-border no-shadow size-120" src="imgs/classification.gif" alt="Classification">
+									<p class="is-size-4">Examples:
+										<ul>
+											<li class="is-size-5 fragment fade-in" data-fragment-index="1">Spam Filteration</li>
+											<li class="is-size-5 fragment fade-in" data-fragment-index="2">Image Classification</li>
+										</ul>
+									</p>
+								</div>
+								<div class="ai">
+									<span class="is-size-3">Regression</span>
+									<br>
+									<span class="is-size-5">Continuous Output</span>
+									<img class="no-bg no-border no-shadow size-50" src="imgs/regression.gif" alt="Regression">
+									<p class="is-size-4">Examples:
+										<ul>
+											<li class="is-size-5 fragment fade-in" data-fragment-index="3">Predicting Stock Price</li>
+											<li class="is-size-5 fragment fade-in" data-fragment-index="4">Predicting Arrival Times in Navigation Apps</li>
+										</ul>
+									</p>
+								</div>
+							</div>
+						</section>
+
+						<!-- Slide 36 -->
+						<section id="36">
+							<p class="is-size-2 has-text-weight-semibold">Unsupervised Learning</p>
+							<p class="is-size-3 has-text-weight-semibold has-text-primary">Data + No Labels</p>
+							<br>
+							<div class="side-by-side">
+								<div class="ai">
+									<span class="is-size-3">Clustering</span>
+									<img class="no-bg no-border no-shadow" src="imgs/clustering.gif" alt="Clustering">
+									<p class="is-size-4">Examples:
+										<ul>
+											<li class="is-size-5 fragment fade-in" data-fragment-index="1">Customer Segmentation</li>
+											<li class="is-size-5 fragment fade-in" data-fragment-index="2">Targeted Marketing</li>
+										</ul>
+									</p>
+								</div>
+								<div class="ai">
+									<span class="is-size-3">Anomaly Detection</span>
+									<img class="no-bg no-border no-shadow" src="imgs/anomaly.png" alt="Anomaly Detection">
+									<p class="is-size-4">Examples:
+										<ul>
+											<li class="is-size-5 fragment fade-in" data-fragment-index="3">Unusual Behaviour in surveillance cameras</li>
+											<li class="is-size-5 fragment fade-in" data-fragment-index="4">Sensor faults or unusual signals</li>
+										</ul>
+									</p>
+								</div>
+							</div>
+						</section>
+
+						<!-- Slide 37 -->
+						<section id="37">
+							<p class="is-size-2 has-text-weight-semibold">Reinforcement Learning</p>
+							<p class="is-size-3 has-text-weight-semibold has-text-primary">Learning Algorithm has memory. Learns from Experience & Mistakes</p>
+							<br>
+							<img class="no-bg no-border no-shadow size-70" src="imgs/reinforcement.png" alt="Reinforcement Learning">	
+						</section>
+
+						<!-- Slide 38 -->
+						<section id="38">
+							<p class="is-size-2 has-text-weight-semibold">This is now..</p>
+							<div class="ai">
+								<div class="level">
+									<div class="level-item">
+										<img class="no-bg no-border no-shadow" width="500" src="imgs/alexa.gif" alt="Smart Voice Assistants">
+									</div>
+									<div class="level-item">
+										<img class="no-bg no-border no-shadow" width="410" src="imgs/chess-robot.gif" alt="Robot Playing Chess">
+									</div>
+								</div>
+								<div class="level">
+									<div class="level-item">
+										<img class="no-bg no-border no-shadow" width="500" src="imgs/football-robot.gif" alt="Robot Playing Football">
+									</div>
+									<div class="level-item">
+										<img class="no-bg no-border no-shadow" width="450" src="imgs/tesla.gif" alt="Self Driving Car">
+									</div>
+								</div>
+							</div>
+						</section>
+
+						<!-- Slide 39 -->
+						<section id="39">
+							<p class="is-size-2 has-text-weight-semibold">Imagine tomorrow's possibilities..</p>
+							<p class="is-size-2 has-text-primary">Can we reach General Artificial Intelligence in the near future..?</p>
+						</section>
+
+						<!-- Slide 40 -->
+						<section id="40">
+							<iframe width="960" height="500" src="https://www.youtube.com/embed/_Xcmh1LQB9I?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<br>
+							<br>
+							<p class="is-size-4">Thank You!</p>
 						</section>
 					</div>
 				</div>
