Remove Duplicate Slide

--- a/index.html
+++ b/index.html
@@ -312,12 +312,6 @@
 
 						<!-- Slide 17 -->
 						<section id="17">
-							<h3>What does a Machine do with the Data?</h3>
-							<span class="is-size-3">And how does it actually learn?</span>
-						</section>
-
-						<!-- Slide 18 -->
-						<section id="18">
 							<span class="is-size-3">A Machine tries to find a relationship from the input (X) to the ouput (Y)</span>
 							<img class="no-bg no-border no-shadow size-50" src="imgs/fit-data.gif" alt="Finding a Model">
 							<br>
@@ -327,14 +321,14 @@
 							<p class="is-size-5">*Algorithm: a set of steps to follow by a program to solve a problem</p>
 						</section>
 
-						<!-- Slide 19 -->
-						<section id="19">
+						<!-- Slide 18 -->
+						<section id="18">
 							<h4>How does the Machine learn to get the best Model?</h4>
 							<p class="fragment">Through configurable parameters</p>
 						</section>
 
-						<!-- Slide 20 -->
-						<section id="20">
+						<!-- Slide 19 -->
+						<section id="19">
 							<h4>Let's take an example</h4>
 							<span class="is-size-3">Below is a simple Linear Regression</span>
 							<img class="no-bg no-border no-shadow size-50" src="imgs/linear-regression.png" alt="Linear Regression">
@@ -345,8 +339,8 @@
 							<span class="is-size-3">Both "a" and "b" are <span class="has-text-primary">Configurable Parameters</span> that the learning algorithm can tune to find the best Model</span>
 						</section>
 
-						<!-- Slide 21 -->
-						<section id="21">
+						<!-- Slide 20 -->
+						<section id="20">
 							<h4>How does a Learning Algorithm know it is correct?</h4>
 							<span class="is-size-3">We measure its Performance by calculating a <span class="has-text-primary">Cost Function</span></span>
 							<img class="no-bg no-border no-shadow size-30" src="imgs/dial.gif" alt="Measure Performance">
@@ -354,21 +348,21 @@
 							<p class="is-size-4">The Learning Algorithm's mission is to find Parameters that <span class="has-text-primary">minimize</span> the cost function</p>
 						</section>
 
-						<!-- Slide 22 -->
-						<section id="22">
+						<!-- Slide 21 -->
+						<section id="21">
 							<img class="no-bg no-border no-shadow size-70 move-up" src="imgs/train.gif" alt="Model Training">
 						</section>
 
-						<!-- Slide 23 -->
-						<section id="23">
+						<!-- Slide 22 -->
+						<section id="22">
 							<h4>This process is called <span class="has-text-primary">Model Training</span></h4>
 							<p class="is-size-3">By the end of this process, we have a model that describes relationships in our data, now we can use that model to predict an output (that we don't know) from new input (future data)</p>
 							<br>
 							<h3 class="fragment has-text-primary">That's the essence of AI</h3>
 						</section>
 
-						<!-- Slide 24 -->
-						<section id="24">
+						<!-- Slide 23 -->
+						<section id="23">
 							<h4>What problems can Machine Learning solve?</h4>
 							<div class="side-by-side">
 								<div class="ai">
@@ -393,8 +387,8 @@
 								</div>
 						</section>
 
-						<!-- Slide 25 -->
-						<section id="25">
+						<!-- Slide 24 -->
+						<section id="24">
 							<p class="is-size-3">So Machine Learning is only able to solve very simple problems..</p>
 							<br>
 							<p>What about the more complex tasks like
@@ -413,15 +407,15 @@
 							<p class="is-size-4">It needs advanced feature engineering skills for such problems..is there an alternative?</p>
 						</section>
 
-						<!-- Slide 26 -->
-						<section id="26">
+						<!-- Slide 25 -->
+						<section id="25">
 							<p class="is-text-3">Let's take this to another level..</p>
 							<br>
 							<h3 class="fragment has-text-primary">Deep learning</h3>
 						</section>
 
-						<!-- Slide 27 -->
-						<section id="27" data-transition="zoom">
+						<!-- Slide 26 -->
+						<section id="26" data-transition="zoom">
 							<h4 class="move-up">Deep Learning</h4>
 							<span id="experience-animation-dl">+ Experience</span>
 							<div class="level">
@@ -434,45 +428,45 @@
 							</div>
 						</section>
 
-						<!-- Slide 28 -->
-						<section id="28">
+						<!-- Slide 27 -->
+						<section id="27">
 							<h3>Let's Take an Example</h3>
 							<img class="no-bg no-border no-shadow" src="imgs/cnn-example.gif" alt="Convolutional Neural Network">
 						</section>
 
-						<!-- Slide 29 -->
-						<section id="29">
+						<!-- Slide 28 -->
+						<section id="28">
 							<h4>Building block of a Neural Network</h4>
 							<img class="no-bg no-border no-shadow" src="imgs/neuron.gif" alt="Artificial Neuron">
 						</section>
 
-						<!-- Slide 30 -->
-						<section id="30">
+						<!-- Slide 29 -->
+						<section id="29">
 							<h4>Comparing Artificial Neuron to a Human Neuron</h4>
 							<img class="no-bg no-border no-shadow size-120" src="imgs/human-neuron.gif" alt="Human Neuron">
 						</section>
 
-						<!-- Slide 31 -->
-						<section id="31">
+						<!-- Slide 30 -->
+						<section id="30">
 							<h4>Stacking Many Neurons Together</h4>
 							<br>
 							<div class="side-by-side">
 								<div class="ai">
 									<span class="is-size-3">Humans</span>
-									<img class="no-bg no-border no-shadow" src="imgs/brain.gif" alt="Human Brain">
+									<img class="no-bg no-border no-shadow" width="500" src="imgs/brain.gif" alt="Human Brain">
 									<p class="is-size-3">~100-1,000 Trillion synapses</p>
 								</div>
 								<div class="ai">
 									<span class="is-size-3">Deep Neural Network</span>
-									<img class="no-bg no-border no-shadow" src="imgs/dnn.gif" alt="Deep Neural Network">
+									<img class="no-bg no-border no-shadow" width="525" src="imgs/dnn.gif" alt="Deep Neural Network">
 									<p class="is-size-3">~1-10 Billion Artificial Neurons</p>
 								</div>
 							</div>
 							<span class="is-size-4">Humans have ~10,000 times more computational power than the most powerful "computer brains"</span>
 						</section>
 
-						<!-- Slide 32 -->
-						<section id="32">
+						<!-- Slide 31 -->
+						<section id="31">
 							<h4>What's special about Deep Learning?</h4>
 							<span class="is-size-3">It can automatically detect millions of features that can be very subtle, but combined, they can be the bases of a machine's understanding of unstructured data like Images and Sound</span>
 							<br>
@@ -480,22 +474,22 @@
 							<p class="is-size-4">Ok, but how does a Neural Network actually learn?</p>
 						</section>
 
-						<!-- Slide 33 -->
-						<section id="33">
+						<!-- Slide 32 -->
+						<section id="32">
 							<h3>Backpropagation</h3>
 							<img class="no-bg no-border no-shadow size-120" src="imgs/backpropagation.gif" alt="Backpropagation">
 						</section>
 
-						<!-- Slide 34 -->
-						<section id="34">
+						<!-- Slide 33 -->
+						<section id="33">
 							<h4>What Problems Can be Solved with ML and DL?</h4>
 							<br>
 							<p class="is-size-4">Anything that falls under the following categories</p>
 							<img class="no-bg no-border no-shadow" src="imgs/ml-types.jpeg" alt="Machine Learning Types">
 						</section>
 
-						<!-- Slide 35 -->
-						<section id="35">
+						<!-- Slide 34 -->
+						<section id="34">
 							<p class="is-size-2 has-text-weight-semibold">Supervised Learning</p>
 							<p class="is-size-3 has-text-weight-semibold has-text-primary">Data + Labels (What this data means)</p>
 							<br>
@@ -527,8 +521,8 @@
 							</div>
 						</section>
 
-						<!-- Slide 36 -->
-						<section id="36">
+						<!-- Slide 35 -->
+						<section id="35">
 							<p class="is-size-2 has-text-weight-semibold">Unsupervised Learning</p>
 							<p class="is-size-3 has-text-weight-semibold has-text-primary">Data + No Labels</p>
 							<br>
@@ -556,16 +550,16 @@
 							</div>
 						</section>
 
-						<!-- Slide 37 -->
-						<section id="37">
+						<!-- Slide 36 -->
+						<section id="36">
 							<p class="is-size-2 has-text-weight-semibold">Reinforcement Learning</p>
 							<p class="is-size-3 has-text-weight-semibold has-text-primary">Learning Algorithm has memory. Learns from Experience & Mistakes</p>
 							<br>
 							<img class="no-bg no-border no-shadow size-70" src="imgs/reinforcement.png" alt="Reinforcement Learning">	
 						</section>
 
-						<!-- Slide 38 -->
-						<section id="38">
+						<!-- Slide 37 -->
+						<section id="37">
 							<p class="is-size-2 has-text-weight-semibold">This is now..</p>
 							<div class="ai">
 								<div class="level">
@@ -587,14 +581,14 @@
 							</div>
 						</section>
 
-						<!-- Slide 39 -->
-						<section id="39">
+						<!-- Slide 38 -->
+						<section id="38">
 							<p class="is-size-2 has-text-weight-semibold">Imagine tomorrow's possibilities..</p>
 							<p class="is-size-2 has-text-primary">Can we reach General Artificial Intelligence in the near future..?</p>
 						</section>
 
-						<!-- Slide 40 -->
-						<section id="40">
+						<!-- Slide 39 -->
+						<section id="39">
 							<iframe width="960" height="500" src="https://www.youtube.com/embed/_Xcmh1LQB9I?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							<br>
 							<br>
