--- a/index.html
+++ b/index.html
@@ -356,7 +356,9 @@
 
 						<!-- Slide 21 -->
 						<section id="21">
-							<img class="no-bg no-border no-shadow size-70 move-up" src="https://cdn-images-1.medium.com/max/1600/1*KQVi812_aERFRolz_5G3rA.gif" alt="Model Training">
+							<img class="no-bg no-border no-shadow move-up" src="https://cdn-images-1.medium.com/max/1600/1*KQVi812_aERFRolz_5G3rA.gif" alt="Model Training">
+							<br>
+							<br>
 							<span class="is-size-7">
 								<a href="https://medium.com/onfido-tech/machine-learning-101-be2e0a86c96a">https://medium.com/onfido-tech/machine-learning-101-be2e0a86c96a</a>
 							</span>
